# SHiM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  notes.txt  simple.cpp
JM/: Makefile
JM/lcommon/inc/: ifunctions.h
JM/lencod/: Makefile
JM/lencod/inc/: conformance.h  defines.h  macroblock.h
JM/lencod/src/: configfile.c  conformance.c  explicit_gop.c  filehandle.c  fmo.c  intra16x16.c  intra4x4.c  intrarefresh.c  leaky_bucket.c  lencod.c  macroblock.c  rd_intra_jm.c
apps/JM/: CoLaJM.cpp  SHiMJM.cpp  containers.h  utils.cpp  utils.h
apps/h264/: h264.cpp  sh264.cpp  structs.h  typedefs.h
apps/jpeg/: bits.h  huffman.cpp  huffman.h  jpeg.cpp  syntax.cpp  syntax.h
apps/jpeg/staged/: bits.cpp  huffman.cpp  huffman.h  jpeg.cpp  sjpeg.cpp
apps/jpeg/unstaged/: syntax.cpp  syntax.h  ujpeg.cpp
cola/bits/staged/: bitstream.h
cola/common/: loop_type.h
cola/hmda/common/: functors.h
cola/hmda/runtime/: impls.h
cola/hmda/staged/: annotations.h  expr.h  fwrappers.h
cola/runtime/: heaparray.h  impls.h
cola/runtime/cpp/: heaparray.h  impls.h  ref_count.h  runtime.h
cola/staged/: annotations.h  bitstream.h  buildit_extensions.h  compile.h  defs.h  expr.h  functors.h  fwddecls.h  fwrappers.h  object.h  slices.h  staged.h  staged_allocators.h  staged_blocklike.h  staged_utils.h  test_utils.h  traits.h
cola/unstaged/: base.h
drivers/: driver1.cpp
examples/: example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp
hmda/: base.h  expr.h  functors.h  hmda.h  hmda_runtime.h  hmda_staged.h  hmda_unstaged.h
hmda.old/staged/: fwd.h  hmda.h  traits.h  utils.h
hmda/common/: defs.h  format.h  format.h~  functors.h  loop_type.h
hmda/runtime/: arrays.h  heaparray.h  impls.h  ref_count.h
hmda/staged/: annotations.h  expr.h  exprs.h  format.h  fwd.h  fwddecls.h  fwrappers.h  hmda.h  hmda.h.old  hmda_staged.h  loops.h  schedule.h  slices.h  stage_factory.h  staged.h  staged_allocators.h  staged_blocklike.h  staged_ref_array.h  staged_utils.h  traits.h  utils.h
hmda/unstaged/: #unstaged_blocklike.h#  arrays.h  unstaged_blocklike.h
scratch/: scratch1.c  sscratch1.cpp
shim/common/: loop_type.h  utils.h
shim/runtime/cpp/: heaparray.h  impls.h  runtime.h
shim/staged/: annotations.h  bitstream.h  compile.h  defs.h  expr.h  fwddecls.h  fwrappers.h  location.h  object.h  passes.h  slices.h  staged.h  staged_allocators.h  staged_blocklike.h  staged_utils.h  test_utils.h  traits.h
shim/unstaged/: huffman.cpp  huffman.h  mwe.cpp  test.cpp  ujpeg.cpp  unite.h
shim2/runtime/cpp/: heaparray.hpp  impls.hpp  runtime.hpp
shim2/staged/: allocators.hpp  annotations.hpp  build.sh  compile.hpp  driver.c  driver.cpp  expr.hpp  functors.hpp  fwddecls.hpp  fwrappers.hpp  my_func.hpp  passes.hpp  properties.hpp  ref.hpp  shim.hpp  tensors.hpp  test.cpp  test_utils.hpp  traits.hpp  utils.hpp
tests/: test0.cpp  test1.cpp  test2.cpp  test2_driver.cpp  test3.cpp  test3_driver.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test8_driver.cpp  test_driver.cpp
